studio configuration to avoid wizard

--- a/idea.properties
+++ b/idea.properties
@@ -1,4 +1,6 @@
 # Path of the file : /home/gitpod/android-studio/bin
+# Path of SDK :  /home/gitpod/Android/Sdk
+# PAth of plugins ~/android-studio/plugins/android-compose-ide-plugi
 # Use ${idea.home.path} macro to specify location relative to IDE installation home.
 # Use ${xxx} where xxx is any Java property (including defined in previous lines of this file) to refer to its value.
 # Note for Windows users: please make sure you're using forward slashes: C:/dir1/dir2.
@@ -6,12 +8,12 @@
 #---------------------------------------------------------------------
 # Uncomment this option if you want to customize a path to the settings directory.
 #---------------------------------------------------------------------
-# idea.config.path=${user.home}/.AndroidStudio/config
+ idea.config.path=${user.home}/.AndroidStudio/config
 
 #---------------------------------------------------------------------
 # Uncomment this option if you want to customize a path to the caches directory.
 #---------------------------------------------------------------------
-# idea.system.path=${user.home}/.AndroidStudio/system
+ idea.system.path=${user.home}/.AndroidStudio/system
 
 #---------------------------------------------------------------------
 # Uncomment this option if you want to customize a path to the user-installed plugins directory.
